# Le-Phonk

./: .gitignore  CMakeLists.txt  LICENSE  LePhonk.jucer  README.md
Builds/VisualStudio2022/: DistWDYM.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Common/: Constants.h  ParameterText.cpp  ParameterText.h  Ranges.cpp  Ranges.h  RingBuffer.cpp  RingBuffer.h
Source/DSP/: Fonz.cpp  Fonz.h  Lemonz.cpp  Lemonz.h  OTT.cpp  OTT.h  UpDownComp.cpp  UpDownComp.h  Zekete.cpp  Zekete.h
Source/DSP/OTT/: OTT.cpp  OTTwithMultiplier.cpp  OTTwithMultiplier.h  UpDownComp.cpp  UpDownComp.h
Source/DSP/Utils/: InterleavedAudio.cpp  InterleavedAudio.h  SIMDFilter.cpp  SIMDFilter.h
Source/DSP/Zekete/: Bitcrush.cpp  Bitcrush.h  Dist1.cpp  Dist1.h  Dist2.cpp  Dist2.h  Dist3.cpp  Dist3.h  Dist4.cpp  Dist4.h  Dist5.cpp  Dist5.h  Dist6.cpp  Dist6.h  DistTemplate.cpp  DistTemplate.h  DistWDYM.cpp  Rectify.cpp  Rectify.h  WDYMShaper.h  ZeketeHeader.h
Source/GUI/: WindowLayout.cpp  WindowLayout.h
Source/GUI/About/: AboutOverlay.cpp  AboutOverlay.h  AboutWindow.cpp  AboutWindow.h  BackButton.h  CheckmarkButton.cpp  CheckmarkButton.h  TextButton.cpp  TextButton.h  UpdatesButton.cpp  UpdatesButton.h  WebsiteButton.cpp  WebsiteButton.h
Source/GUI/About/UpdateCheck/: BackButton.cpp  BackButton.h  ServerCheck.cpp  ServerCheck.h  UpdateChecker.cpp  UpdateChecker.h
Source/GUI/CustomLooks/: CustomLook.cpp  CustomLook.h  DrippyLook.cpp  DrippyLook.h  HellLook.cpp  HellLook.h  JuiceLook.cpp  JuiceLook.h
Source/GUI/Fonz/: FonzLayout.cpp  FonzLayout.h
Source/GUI/Header/: BypassButton.cpp  BypassButton.h  BypassGain.cpp  BypassGain.h  LogoButton.cpp  LogoButton.h  SkinSelect.cpp  SkinSelect.h
Source/GUI/Ottz/: MultiplierSlider.cpp  MultiplierSlider.h  OttzLayout.cpp  OttzLayout.h  TimeKnob.cpp  TimeKnob.h
Source/GUI/Utils/: DualLabel.cpp  DualLabel.h  FullSlider.cpp  FullSlider.h  GuiData.h  HellLook.cpp  HellLook.h  TooltipLabel.cpp  TooltipLabel.h  TooltipSlider.cpp  TooltipSlider.h
Source/GUI/Zekete/: DistGraph.cpp  DistGraph.h  DistSelect.cpp  DistSelect.h  ZeketeLayout.cpp  ZeketeLayout.h
